<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/detail_padding">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/detail_margin"
            android:contentDescription="@string/content_description"
            tools:src="@drawable/img_balboa_park"/>

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="@font/pacifico"
            android:textSize="@dimen/detail_title_size"
            android:padding="@dimen/detail_margin"
            tools:text="@string/test_title"/>

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/detail_text_size"
            android:padding="@dimen/detail_margin"
            tools:text="@string/test_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detail_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/detail_margin"
                android:contentDescription="@string/web_site"
                android:src="@drawable/ic_globe" />

            <TextView
                android:id="@+id/detail_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:textSize="@dimen/detail_address_size"
                android:padding="@dimen/detail_margin"
                tools:text="@string/test_address"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>